<resources>
    <string name="app_name">Sooffer Driver</string>
    <string name="welcome_title">There are many variations of passangs of lorem \n lpsum available, but the majority have suffered \n alternation in some form ,by injected humour</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_wait">Please wait...</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="app_font">Roboto_Regular.ttf</string>
    <string name="default_notification_channel_id">1</string>
    <string-array name="nav_drawer_labels">
        <item>@string/profile</item>
        <item>@string/Bank</item>
        <item>@string/trip</item>
        <item>@string/rating</item>
        <item>@string/Manage_Vehicles</item>
        <item>@string/Manage_category</item>
        <item>@string/Manage_Document</item>
        <item>@string/Earnings</item>
        <item>@string/notification</item>
      

    </string-array>
    <string name="profile">My Profile</string>
    <string name="Manage_Service">Manage Service</string>
    <string name="Manage_Vehicles">Manage Vehicles</string>
    <string name="Manage_category">Manage Category</string>
    <string name="Manage_Document">Documents</string>
    <string name="Earnings">Earnings</string>
    <string name="Bank">Wallet &amp; Payouts</string>
    <string name="navi_vehicles">Manage Vehicles</string>
    <string name="driver_is_running">Sooffer Driver is Running</string>
    <string name="tap_for_more_information_or_to_stop_the_app">Tap for more information or to stop the app</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="invalidpass">INVALID_PASSWORD</string>
    <string name="entervalidemailornumber">Enter Valid Email or Mobile Number</string>
    <string name="payment">Payment</string>
    <string name="wallet">My Wallet</string>
    <string name="trip">Trips</string>
    <string name="invite">Invite Friends</string>
    <string name="Contacts">Emergency Contact</string>
    <string name="support">Support</string>
    <string name="rating">Ratings</string>
    <string name="feedback">Rider Feedback</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="language">Language</string>
    <string name="currency">Currency</string>
    <string name="plasces">Plasces</string>
    <string name="home_address">Home Address</string>
    <string name="home_place">Home Place</string>
    <string name="work_address">Work Address</string>
    <string name="work_place">work Place</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="contact_us">Contact Us</string>
    <string name="email_address">Email Address</string>
    <string name="cc">CC</string>
    <string name="bank_details">Bank Details</string>
    <string name="payment_email">Payment Email</string>
    <string name="acc_name">Bank Account Holder Name</string>
    <string name="acc_number">Account Number</string>
    <string name="bnk_location">Bank Location</string>
    <string name="bnk_name">Bank Name</string>
    <string name="bic_code">IFSC Code</string>
    <string name="feedbacks">information about reactions to a product, a person\'s performance of a task, etc. which is used as a basis for improvement.</string>
    <string name="no_trip_data">No Trip Data</string>
    <string name="feedback_content">Check out feedback from riders and learn how to improve</string>
    <string name="addvehicle">Add Vehicle</string>
    <string name="you_are_now_online">You are now online</string>
    <string name="you_are_now_offline">You are now offline</string>
    <string name="proof_not_accept">Your proof status is pending</string>
    <string name="proof_rejected">Your proof status is Rejected</string>
    <string name="internet_connect">Internet Alert</string>
    <string name="connection">Please Check Your Internet Connection</string>
    <string name="file_provider_authority" translatable="false">com.soofer.driver.fileprovider</string>
    <string name="service_type">Service Type</string>
    <string name="something_went_wrong">Poor Connection</string>
    <string name="tap_to_arrive">Tap to Arrive</string>
    <string name="top_to_start">Tap to Start</string>
    <string name="tap_to_end">Tap to End</string>
    <string name="addressss">Address</string>
    <string name="rider_details">Rider Details</string>
    <string name="navigation">Navigation</string>
    <string name="user_name">user name</string>
    <string name="pickup_address">Pickup address</string>
    <string name="drop_address">Drop address</string>
    <string name="total_bill">Total Bill</string>
    <string name="cancel">Cancel</string>
    <string name="payment_method">Payment Method</string>
    <string name="walletDetect">Wallet Detection</string>
    <string name="select_document">Select Document</string>
    <string name="vehicle_insurance">Vehicle Insurance</string>
    <string name="missing">Missing</string>
    <string name="upload_document">UPLOAD DOCUMENT</string>
    <string name="manage">MANAGE</string>
    <string name="permit">Permit</string>
    <string name="submit">Submit</string>
    <string name="yes">Yes</string>
    <string name="are_you_update">Are You Sure want to Update a Vehicle</string>
    <string name="are_you_sure_add">Are You Sure want to Add a Vehicle</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="licence_plate">Licence Plate</string>
    <string name="color">Color</string>
    <string name="totaly_earnings">Totaly Earnings</string>
    <string name="daily_earnings">Daily Earnings</string>
    <string name="weekly_earnings">Weekly Earnings</string>
    <string name="monthly_earnings">Monthly Earnings</string>
    <string name="yearly_earnings">Yearly Earnings</string>
    <string name="earnings_overview_subtitle">Your trip earnings overview</string>
    <string name="filter_by_date_range">FILTER BY DATE RANGE</string>
    <string name="total">Total</string>
    <string name="booking_no_prefix">Booking #</string>
    <string name="password">Password</string>
    <string name="update_information">Update Information</string>
    <string name="no_feedback">No FeedBack</string>
    <string name="enter_your_passwords">Enter Your password Minimum 6 character</string>
    <string name="confirm_password_min">Enter Your Confirm Minimum 6 character</string>
    <string name="enter_valid_confim_password">Enter Your valid Confirm password</string>
    <string name="enter_otp">Enter Your  OTP</string>
    <string name="enter_valid_otp">Enter Your valid OTP</string>
    <string name="change_password">Change Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_the_email_address_you_used_to_register">Enter the Mobile number you used to register</string>
    <string name="please_added_vehicle">Please add Your Vehicle</string>
    <string name="please_added_driver">Please add Your Driver Document</string>
    <string name="ok">OK</string>
    <string name="forgot_passwordsss">Forgot Password?</string>
    <string name="driver_licence">Driver Licence(Front)</string>
    <string name="insurance">Insurance</string>
    <string name="taxi_passing">Taxi passing</string>
    <string name="next">Next</string>
    <string name="lifetime_trips">LIFETIME TRIPS</string>
    <string name="your_current_rating">YOUR CURRENT RATING</string>
    <string name="rated_trips">RATED TRIPS</string>
    <string name="fivestar_trips">FIVESTAR TRIPS</string>
    <string name="referral_invite_code_option">Referral / invite code(Option)</string>
    <string name="i_agree_to_the_to_the_terms_amp_comdition_and_privacy_policy"><![CDATA[I agree to the terms & condition and privacy policy]]></string>
    <string name="upload_documentss">Upload document</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="decline">Decline</string>
    <string name="tap_accept">tap Accept</string>
    <string name="your_trip_has_ended_please_rate_your_rider">Your Trip Has Ended Please Rate Your Rider</string>
    <string name="total_fare">Total Fare</string>
    <string name="bill_date">Bill Date</string>
    <string name="discount_applied">Discount Applied</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="base_fare">Base Fare</string>
    <string name="distance_fare">Distance Fare</string>
    <string name="time_fare">Waiting Fare</string>
    <string name="balance_fare">Cancellation Fare</string>
    <string name="detected_fare">Detected Fare</string>
    <string name="how_was_your_ride">How Was Your Ride ?</string>
    <string name="enter_your_comments">Enter your comments</string>
    <string name="change_passwordsss">Change Password</string>
    <string name="enter_old_passwordss">Enter Old Password</string>
    <string name="enter_new_passwordss">Enter New Password</string>
    <string name="enter_new_password_againsss">Enter new Password Again</string>
    <string name="cancelaaa">Cancel</string>
    <string name="google_maps">Google Map</string>
    <string name="waze_maps">Waze Map</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="logout">Logout</string>
    <string name="are_your">Are you sure you want to logout ?</string>
    <string name="enter_old_password">Enter the Old Password</string>
    <string name="enter_minimum">Enter the Minimum 6 to 12 Character</string>
    <string name="old_password">Old Password and New Password same</string>
    <string name="confirm_password">Confirm Password Wrong</string>
    <string name="password_changes_failed">Password Changes Failed</string>
    <string name="app_not">App Not Found</string>
    <string name="for_navigate">For Navigate you need waze app</string>
    <string name="go_to_playstore">Go to playstore</string>
    <string name="minimum_four">Enter  Minimum 4 character</string>
    <string name="valid_email">Enter Valid Email id</string>
    <string name="minimum">Enter the Minimum 6 to 12 Character</string>
    <string name="enter_the_10_digit">Enter the Minimum 10 digit Mobile Number</string>
    <string name="enter_password">Enter the Password</string>
    <string name="acc_name_name">Enter the Account Name</string>
    <string name="enter_the_account">Enter the Account Minimum 12 digits Number</string>
    <string name="bank_location">Enter the Bank Location</string>
    <string name="enter_bank">Enter the Bank Name</string>
    <string name="ifc_code">Enter the IFC Code  Minimum 9 digits Number</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="pickup_fee">Pickup Fee</string>
    <string name="access_fee">TAX</string>
    <string name="please_choose_your_profile_picture">Please Choose Your Profile Picture</string>
    <string name="manage_vehicles">MANAGE VEHICLES</string>
    <string name="add_new">Add NEW</string>
    <string name="select_your_vehicle">Select Your Vehicle</string>
    <string name="otp">OTP</string>
    <string name="phone_number">Phone Number</string>
    <string name="assign">Assign</string>
    <string name="driver_assign_note">Note : The Additional Driver Must be Register in Driver app</string>
    <string name="driver_note">You need to Come with additional driver,so Please Update Another Driver Phone Number</string>
    <string name="driver_detail">Driver Detail</string>
</resources>