<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    app:cardElevation="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_5sdp"
   >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/driver_detail"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            android:gravity="center"
            android:fontFamily="@font/robotomedium"
            android:padding="@dimen/_5sdp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/driver_note"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:gravity="center"
            android:fontFamily="@font/robotomedium"
            android:padding="@dimen/_5sdp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:inputType="number"
            android:hint="@string/phone_number"
            android:gravity="center"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"
            android:maxLength="10"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:id="@+id/edtPhoneNumber"
            tools:ignore="TextFields"
            android:importantForAutofill="no" />
        <Button
            android:id="@+id/btn_SaveImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:fontFamily="@font/robotomedium"
            android:textSize="@dimen/_11sdp"
            android:text="@string/assign"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/driver_assign_note"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:gravity="center"
            android:fontFamily="@font/robotomedium"
            android:padding="@dimen/_5sdp"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>