<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:text="@string/change_passwordsss"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_height="wrap_content" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:hint="@string/enter_old_passwordss"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            app:met_accentTypeface="@string/app_font"
            android:id="@+id/old_password_txt"
            android:text=""
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/_14sdp"
            app:met_baseColor="@color/black"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelTextColor="@color/black"
            app:met_primaryColor="?colorAccent"
            app:met_minCharacters="6"
            app:met_maxCharacters="12"
            app:met_singleLineEllipsis="true" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:hint="@string/enter_new_passwordss"
            android:id="@+id/new_password_txt"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:text=""
            app:met_accentTypeface="@string/app_font"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/_14sdp"
            app:met_baseColor="@color/black"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelTextColor="@color/black"
            app:met_primaryColor="?colorAccent"
            app:met_minCharacters="6"
            app:met_maxCharacters="12"
            app:met_singleLineEllipsis="true" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:hint="@string/enter_new_password_againsss"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:text=""
            android:id="@+id/password_again_txt"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/_14sdp"
            app:met_baseColor="@color/black"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelTextColor="@color/black"
            app:met_primaryColor="?colorAccent"
            app:met_minCharacters="6"
            app:met_maxCharacters="12"
            app:met_accentTypeface="@string/app_font"
            app:met_singleLineEllipsis="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/cancelaaa"
                android:id="@+id/cancel_txt"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textSize="@dimen/_15sdp"
                android:padding="@dimen/_5sdp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/ok"
                android:id="@+id/ok_txt"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textSize="@dimen/_15sdp"
                android:padding="@dimen/_5sdp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>