<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:layout_gravity="center_horizontal"
            android:scaleX="-1"
            app:srcCompat="@drawable/ic_vehicle"
            android:tint="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/select_your_vehicle"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/vehicle_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            tools:listitem="@layout/vehicle_list_adapter"
            tools:itemCount="2"
            android:padding="@dimen/_4sdp">
        </androidx.recyclerview.widget.RecyclerView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_5sdp">

            <TextView
                android:id="@+id/txt_add_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/_5sdp"
                android:text="@string/add_new"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/manage_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/txt_add_new"
                android:padding="@dimen/_5sdp"
                android:text="@string/manage_vehicles"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>