<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:background="@color/white"
            android:elevation="@dimen/_5sdp">

            <ImageButton
                android:id="@+id/back_img"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@null"
                app:tint="@color/black"
                app:srcCompat="@drawable/ic_arrow_back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_toEndOf="@+id/back_img"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:layout_below="@+id/header">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:src="@drawable/ic_applogo"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:text="@string/enter_the_email_address_you_used_to_register"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="normal" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/email_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:digits="0123456789qwertzuiopasdfghjklyxcvbnm@.!#$%^_&amp;"
                    android:hint="@string/mobile_number"
                    android:imeOptions="actionDone"
                    android:text=""
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/_15sdp"
                    app:met_baseColor="@color/black"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="?colorAccent"
                    app:met_singleLineEllipsis="true" />

                <LinearLayout
                    android:id="@+id/change_password_Layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/password_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:hint="@string/password"
                        android:imeOptions="actionNext"
                        android:text=""
                        android:drawableEnd="@drawable/ic_hide"
                        android:drawablePadding="@dimen/_5sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/_15sdp"
                        app:met_baseColor="@color/black"
                        app:met_floatingLabel="highlight"
                        app:met_maxCharacters="12"
                        app:met_minCharacters="6"
                        app:met_primaryColor="?colorAccent"
                        app:met_singleLineEllipsis="true" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/confirmpassword_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:hint="@string/confirm_password"
                        android:imeOptions="actionNext"
                        android:text=""
                        android:drawableEnd="@drawable/ic_hide"
                        android:drawablePadding="@dimen/_5sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/_15sdp"
                        app:met_baseColor="@color/black"
                        app:met_floatingLabel="highlight"
                        app:met_maxCharacters="12"
                        app:met_minCharacters="6"
                        app:met_primaryColor="?colorAccent"
                        app:met_singleLineEllipsis="true" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/otp_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:digits="0123456789qwertzuiopasdfghjklyxcvbnm@."
                        android:hint="@string/otp"
                        android:imeOptions="actionDone"
                        android:text=""
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/_15sdp"
                        app:met_baseColor="@color/black"
                        app:met_floatingLabel="highlight"
                        app:met_primaryColor="?colorAccent"
                        app:met_singleLineEllipsis="true" />
                </LinearLayout>

                <Button
                    android:id="@+id/submit_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@color/colorPrimary"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

        </ScrollView>
    </RelativeLayout>

</FrameLayout>