<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:cardElevation="@dimen/_5sdp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/app_logo_img"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/ic_applogo"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:id="@+id/title_txt"
                android:text="@string/please_choose_your_profile_picture"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/camera_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/camera"
                    android:textColor="@color/white"
                    />

                <Button
                    android:id="@+id/gallary_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:visibility="gone"
                    android:ellipsize="end"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/gallery"
                    android:textColor="@color/white"
                     />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>